ðŸ‡µðŸ‡­ Add Filipino/Tagalog Language Support v2.1.0
Major Features:
- Full Filipino (Tagalog) grammar and spelling checking
- 35+ Filipino-specific grammar rules
- Automatic language detection (English, Filipino, Mixed)
- Bilingual mode for Taglish support
- Language selector in settings and website demo

Filipino Grammar Rules:
- Ng vs Nang proper usage
- Din vs Rin / Daw vs Raw phonetic matching
- Prefix spacing (nag-, pag-, pinaka-, ka-...-an)
- Redundancy detection (mga mga, ng ng)
- May vs Mayroon context-aware usage
- Common misspellings (kase â†’ kasi)
- Hyphenation (pag-asa)

Technical Implementation:
- filipino-rules.js: 35+ Filipino grammar patterns
- language-detector.js: Marker-based language detection
- Updated content-enhanced.js with multi-language support
- Language settings in options page
- Website demo with language selector

Documentation:
- FILIPINO-SUPPORT.md: Comprehensive feature guide
- Updated README.md with bilingual support
- Updated CHANGELOG.md with v2.1.0 details
- Examples and usage instructions

Salamat sa paggamit ng GrammarGuard! ðŸ‡µðŸ‡­

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "GrammarGuard - Writing Assistant",
-  "version": "2.0.0",
-  "description": "AI-powered writing assistant that checks grammar, spelling, and style in real-time across all websites including Slack, Gmail, and more",
+  "version": "2.1.0",
+  "description": "Bilingual (English + Filipino) AI-powered writing assistant that checks grammar, spelling, and style in real-time across all websites",
   "permissions": [
     "activeTab",
     "storage",
@@ -31,7 +31,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "js": ["language-detector.js", "filipino-rules.js", "content-enhanced.js"],
       "css": ["content.css"],
       "run_at": "document_idle"
     }
