--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     "<all_urls>"
   ],
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "popup-enhanced.html",
     "default_icon": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
